tests/syntax_errors/test79_2.tl
require "ifj21"
-2.3
